apps/talos_cluster/clickstack/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: clickstack
  namespace: clickstack
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway
  hostnames:
    - clickstack.midnightthoughts.space
  rules:
    - backendRefs:
        - name: clickstack-app
          port: 3000
      timeouts:
        request: 240s
        backendRequest: 0s
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: clickstack-compression
  namespace: clickstack
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: clickstack
  compression:
    - type: Gzip
    - type: Brotli
